Fixing Inventory Frame Thumbnail & Preview Screen in Sharing [05/01/2018 Tue 07:36 PM] -added 'min-width' for iframe player (embed inventory player) (97%/93%) for the issue of thumbnails not showing correctly *It seems the width are determined in "~\module\idrive\static\jscript\jcarousellite.js" (line 268) script -reduced the margin for preview css to arrage the chapters buttons in place

--- a/module/dvs/static/css/default/default/preview.css
+++ b/module/dvs/static/css/default/default/preview.css
@@ -5,6 +5,6 @@ header, #player_right, #video_information, aside, footer, #select_new, #dealer_l
 
 #player
 {
-	margin-left: 5px;
+	margin-left: 3px;
 }
 
